custom logging grpc interceptor and http middleware
